# lex-parse

./: .gitignore  LEXPARSE_IMPLEMENTATION.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: tests.yml
lexparse/: __init__.py  models.py
lexparse/engine/: clause_detector.py  section_tree.py
lexparse/ingestors/: __init__.py  base.py  docling_ingestor.py  marker_ingestor.py
tests/: test_clause_detector.py  test_ingestors.py  test_models.py  test_section_tree.py  test_smoke.py
