[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexparse"
version = "0.1.0"
description = "Contract-aware document parser — converts PDFs and DOCX into structured, clause-level JSON. Built for Legal AI."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "LexVault Labs", email = "team@lexvault.dev" },
]
keywords = ["legal", "contracts", "parser", "nlp", "rag", "legal-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
docling = ["docling>=2.0"]
marker = ["marker-pdf>=1.0"]
ml = [
    "scikit-learn>=1.3",
    "setfit>=1.0",
    "sentence-transformers>=2.0",
    "spacy>=3.7",
]
llm = [
    "anthropic>=0.30",
    "openai>=1.0",
]
all = [
    "docling>=2.0",
    "marker-pdf>=1.0",
    "scikit-learn>=1.3",
    "setfit>=1.0",
    "sentence-transformers>=2.0",
    "spacy>=3.7",
    "anthropic>=0.30",
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Lexvault-in/lex-parse"
Documentation = "https://github.com/Lexvault-in/lex-parse#readme"
Repository = "https://github.com/Lexvault-in/lex-parse"
Issues = "https://github.com/Lexvault-in/lex-parse/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
strict = true
